@@ -27,13 +27,14 @@ import org.bukkit.command.TabExecutor;
 
 import javax.annotation.Nonnull;
 import java.util.*;
+import java.util.stream.Collectors;
 
 
 /**
  * A class that implements subcommands for the plugin
  */
-public final class CommandManager implements TabExecutor {
-
+public final class CommandManager implements TabExecutor
+{
 	private final PluginMain plugin;
 	private final SubcommandRegistry subcommandRegistry = new SubcommandRegistry();
 
@@ -43,17 +44,19 @@ public final class CommandManager implements TabExecutor {
 	 *
 	 * @param plugin reference to plugin main class
 	 */
-	public CommandManager(final PluginMain plugin) {
+	public CommandManager(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		Objects.requireNonNull(plugin.getCommand("deathcompass")).setExecutor(this);
 
 		// register subcommands
-		for (SubcommandType subcommandType : SubcommandType.values()) {
+		for (SubcommandType subcommandType : SubcommandType.values())
+		{
 			subcommandRegistry.register(subcommandType.create(plugin));
 		}
 
 		// register help subcommand
-		subcommandRegistry.register(new HelpCommand(plugin, subcommandRegistry));
+		subcommandRegistry.register(new HelpSubcommand(plugin, subcommandRegistry));
 	}
 
 
@@ -68,90 +71,97 @@ public final class CommandManager implements TabExecutor {
 	 */
 	@Override
 	public List<String> onTabComplete(final @Nonnull CommandSender sender, final @Nonnull Command command,
-	                                  final @Nonnull String alias, final String[] args) {
-
+	                                  final @Nonnull String alias, final String[] args)
+	{
 		// if more than one argument, use tab completer of subcommand
-		if (args.length > 1) {
+		if (args.length > 1)
+		{
 
 			// get subcommand from map
-			Subcommand subcommand = subcommandRegistry.getCommand(args[0]);
+			Optional<Subcommand> subcommand = subcommandRegistry.getSubcommand(args[0]);
 
 			// if no subcommand returned from map, return empty list
-			if (subcommand == null) {
+			if (subcommand.isEmpty())
+			{
 				return Collections.emptyList();
 			}
 
 			// return subcommand tab completer output
-			return subcommand.onTabComplete(sender, command, alias, args);
+			return subcommand.get().onTabComplete(sender, command, alias, args);
 		}
 
-		// return list of subcommands for which sender has permission
-		return matchingCommands(sender, args[0]);
+		// return list of matching subcommands for which sender has permission
+		return getMatchingSubcommandNames(sender, args[0]);
 	}
 
 
 	/**
 	 * Command handler for DeathChest
 	 *
-	 * @param sender   the command sender
-	 * @param command  the command typed
-	 * @param label    the command label
-	 * @param args     Array of String - command arguments
+	 * @param sender  the command sender
+	 * @param command the command typed
+	 * @param label   the command label
+	 * @param args    Array of String - command arguments
 	 * @return boolean - always returns {@code true}, to suppress bukkit builtin help message
 	 */
 	@Override
 	public boolean onCommand(final @Nonnull CommandSender sender,
-	                               final @Nonnull Command command,
-	                               final @Nonnull String label,
-	                               final String[] args) {
-
+	                         final @Nonnull Command command,
+	                         final @Nonnull String label,
+	                         final String[] args)
+	{
 		// convert args array to list
 		List<String> argsList = new ArrayList<>(Arrays.asList(args));
 
 		String subcommandName;
 
 		// get subcommand, remove from front of list
-		if (argsList.size() > 0) {
-			subcommandName = argsList.remove(0);
+		if (!argsList.isEmpty())
+		{
+			subcommandName = argsList.removeFirst();
 		}
 
 		// if no arguments, set command to help
-		else {
+		else
+		{
 			subcommandName = "help";
 		}
 
 		// get subcommand from map by name
-		Subcommand subcommand = subcommandRegistry.getCommand(subcommandName);
+		Optional<Subcommand> optionalSubcommand = subcommandRegistry.getSubcommand(subcommandName);
 
-		// if subcommand is null, get help command from map
-		if (subcommand == null) {
-			subcommand = subcommandRegistry.getCommand("help");
-			plugin.messageBuilder.build(sender, MessageId.COMMAND_FAIL_INVALID_COMMAND).send();
+		// if subcommand is empty, get help command from map
+		if (optionalSubcommand.isEmpty())
+		{
+			optionalSubcommand = subcommandRegistry.getSubcommand("help");
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_INVALID_COMMAND).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		}
 
 		// execute subcommand
-		return subcommand.onCommand(sender, argsList);
+		optionalSubcommand.ifPresent(subcommand -> subcommand.onCommand(sender, argsList));
+
+		return true;
 	}
 
 
 	/**
 	 * Get matching list of subcommands for which sender has permission
-	 * @param sender the command sender
+	 *
+	 * @param sender      the command sender
 	 * @param matchString the string prefix to match against command names
 	 * @return List of String - command names that match prefix and sender has permission
 	 */
-	private List<String> matchingCommands(final CommandSender sender, final String matchString) {
+	private List<String> getMatchingSubcommandNames(final CommandSender sender, final String matchString)
+	{
 
-		List<String> returnList = new ArrayList<>();
-
-		for (String subcommand : subcommandRegistry.getNames()) {
-			if (sender.hasPermission("deathcompass." + subcommand)
-					&& subcommand.startsWith(matchString.toLowerCase())) {
-				returnList.add(subcommand);
-			}
-		}
-		return returnList;
+		return subcommandRegistry.getKeys().stream()
+				.map(subcommandRegistry::getSubcommand)
+				.filter(Optional::isPresent)
+				.filter(subcommand -> sender.hasPermission(subcommand.get().getPermissionNode()))
+				.map(subcommand -> subcommand.get().getName())
+				.filter(name -> name.toLowerCase().startsWith(matchString.toLowerCase()))
+				.collect(Collectors.toList());
 	}
 
 }
